--- a/packages/material-components-web/scss/theme/_mixins.scss
+++ b/packages/material-components-web/scss/theme/_mixins.scss
@@ -20,7 +20,46 @@
 // THE SOFTWARE.
 //
 
+@import "../feature-targeting/functions";
+@import "../feature-targeting/mixins";
 @import "./variables";
+
+@mixin mdc-theme-core-styles($query: mdc-feature-all()) {
+  $feat-color: mdc-feature-create-target($query, color);
+
+  :root {
+    @include mdc-feature-targets($feat-color) {
+      @each $style in map-keys($mdc-theme-property-values) {
+        --mdc-theme-#{$style}: #{map-get($mdc-theme-property-values, $style)};
+      }
+    }
+  }
+
+  @each $style in map-keys($mdc-theme-property-values) {
+    @if $style != "background" and $style != "surface" {
+      .mdc-theme--#{$style} {
+        @include mdc-feature-targets($feat-color) {
+          @include mdc-theme-prop(color, $style, true);
+        }
+      }
+    } @else {
+      .mdc-theme--#{$style} {
+        @include mdc-feature-targets($feat-color) {
+          @include mdc-theme-prop(background-color, $style);
+        }
+      }
+    }
+  }
+
+  // CSS rules for using primary and secondary (plus light/dark variants) as background colors.
+  @each $style in ("primary", "secondary") {
+    .mdc-theme--#{$style}-bg {
+      @include mdc-feature-targets($feat-color) {
+        @include mdc-theme-prop(background-color, $style, true);
+      }
+    }
+  }
+}
 
 // Applies the correct theme color style to the specified property.
 // $property is typically color or background-color, but can be any CSS property that accepts color values.
@@ -47,7 +86,10 @@
       @if $edgeOptOut {
         // stylelint-disable max-nesting-depth
         @at-root {
-          @supports not (-ms-ime-align:auto) {
+          // IE 11 doesn't understand this syntax and ignores the entire block.
+          // Edge understands this syntax and skips the entire block to avoid a nasty :before/:after pseudo-element bug.
+          // All other browsers apply the styles within the block.
+          @supports not (-ms-ime-align: auto) {
             // stylelint-disable scss/selector-no-redundant-nesting-selector
             & {
               /* @alternate */
@@ -67,7 +109,10 @@
       @if $edgeOptOut {
         // stylelint-disable max-nesting-depth
         @at-root {
-          @supports not (-ms-ime-align:auto) {
+          // IE 11 doesn't understand this syntax and ignores the entire block.
+          // Edge understands this syntax and skips the entire block to avoid a nasty :before/:after pseudo-element bug.
+          // All other browsers apply the styles within the block.
+          @supports not (-ms-ime-align: auto) {
             // stylelint-disable scss/selector-no-redundant-nesting-selector
             & {
               /* @alternate */
